fixed various small typos and warnings